finished create folder-based concat video system

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
 # 動画ファイルの参照元フォルダ
 RAW_VIDEO_DIR="~/gopro/2024-11-10/"
+# RAW_VIDEO_DIR="C:\gopro\2024-11-10"
 # 動画ファイルの保存場所
 CONCAT_VIDEO_DIR="~/gopro/2024-11-10/"
+# # RAW_VIDEO_DIR="C:\gopro\2024-11-10"
+# 動画作成ファイルの一時保管場所
+TEMP_FFMPEG_DIR="./ffmpeg_temp/"
+# 動画作成ファイルの自動削除
+# TEMP_FFMPEG_DELETE=TRUE
+TEMP_FFMPEG_DELETE=FALSE
