--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 # 動画ファイルの参照元フォルダ
-RAW_VIDEO_DIR="~/gopro/2024-11-10/"
+RAW_VIDEO_DIR="C:\ubuntu_share\gopro\2025-05-06"
 # 動画ファイルの保存場所
-CONCAT_VIDEO_DIR="~/gopro/2024-11-10/"
+CONCAT_VIDEO_DIR="C:\ubuntu_share\gopro\2025-05-06"
+# 動画作成ファイルの一時保管場所
+TEMP_FFMPEG_DIR="./tmp_ffmpeg"
+# 動画作成ファイルの自動削除
+TEMP_FFMPEG_DELETE=TRUE
+# TEMP_FFMPEG_DELETE=FALSE
